user-n-device-angular.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ng-und
  namespace: user-n-device-namespace
  labels:
    run: my-ng-und
spec:
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
  selector:
    app: my-ng-und
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: my-ng-und
  namespace: user-n-device-namespace
spec:
  selector:
    matchLabels:
      app: my-ng-und
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  revisionHistoryLimit: 4
  replicas: 1
  minReadySeconds: 20
  template:
    metadata:
      labels:
        app: my-ng-und
    spec:
      containers:
      - image: samvede/user-n-devices-angular:v16
        name: my-ng-und
        #imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: my-ng-und
