user-n-device-apiserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-server
  namespace: user-n-device-namespace
spec:
  ports:
  - port: 8085
  selector:
    app: rest-api-server
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: rest-api-server
  namespace: user-n-device-namespace
spec:
  selector:
    matchLabels:
      app: rest-api-server
  strategy:
    type: RollingUpdate
    #    type: RollingUpdate
    #rollingUpdate:
    #  maxSurge: 2
    #  maxUnavailable: 1
    #revisionHistoryLimit: 4
    #replicas: 12
    # minReadySeconds: 20
  template:
    metadata:
      labels:
        app: rest-api-server
    spec:
      containers:
      - image: samvede/users-n-devices:latest
        name: rest-api-server
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
          name: rest-api-server
