user-n-device-ingress-ctrlr.yaml
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: ingress-ctrlr
#  annotations:
#    kubernetes.io/ingress.class: traefik
#
#

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-web-app 
  namespace: user-n-device-namespace
spec:
  backend:
    serviceName: my-ng-und
    servicePort: 80
